--- a/vehicles_env/vehicles_env/pyvenv.cfg
+++ b/vehicles_env/vehicles_env/pyvenv.cfg
@@ -2,4 +2,4 @@ home = C:\Users\artur\anaconda3\envs\myenv
 include-system-site-packages = false
 version = 3.12.5
 executable = C:\Users\artur\Tripleten_DA\Sprint6\Sprint6_ArturoLujan\streamlit\Scripts\python.exe
-command = C:\Users\artur\Tripleten_DA\Sprint6\Sprint6_ArturoLujan\streamlit\Scripts\python.exe -m venv C:\Users\artur\Tripleten_DA\Sprint6\Sprint6_ArturoLujan\vehicles_env
+command = C:\Users\artur\Tripleten_DA\Sprint6\Sprint6_ArturoLujan\streamlit\Scripts\python.exe -m venv C:\Users\artur\Tripleten_DA\Sprint6\Sprint6_ArturoLujan\vehicles_env\vehicles_env
